2017-12-18  Dmitry V. Levin  <ldv@altlinux.org>

	[BZ #22627]
	* elf/dl-load.c (_dl_init_paths): Remove _dl_dst_substitute preparatory
	code and invocation.

2017-11-18  Florian Weimer  <fweimer@redhat.com>

	* sysdeps/unix/sysv/linux/tst-ttyname.c
	(become_root_in_mount_ns): Remove.
	(do_in_chroot_1): Call support_enter_mount_namespace.
	(do_in_chroot_2): Likewise.
	(do_test): Call support_become_root early.

2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	[BZ #22145]
	* sysdeps/unix/sysv/linux/tst-ttyname.c: New file.
	* sysdeps/unix/sysv/linux/Makefile: Add tst-ttyname to tests.

2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	[BZ #22145]
	* sysdeps/unix/sysv/linux/ttyname.c (ttyname):
	Defer is_pty check until end of the function.
	* sysdeps/unix/sysv/linux/ttyname_r.c (__ttyname_r): Likewise.

2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	[BZ #22145]
	* sysdeps/unix/sysv/linux/ttyname.h (is_mytty): New function.
	* sysdeps/unix/sysv/linux/ttyname.c (getttyname): Call is_mytty.
	(ttyname): Likewise.
	* sysdeps/unix/sysv/linux/ttyname_r.c (getttyname_r): Likewise.
	(__ttyname_r): Likewise.

2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	* sysdeps/unix/sysv/linux/ttyname.h (is_pty): Change return type from
	int to bool.

2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	* sysdeps/unix/sysv/linux/ttyname.h (is_pty): Update doc reference.

2017-11-15  Luke Shumaker  <lukeshu@parabola.nu>

	* manual/terminal.texi (Is It a Terminal):
	Mention ENODEV for ttyname and ttyname_r.

2017-12-14  Florian Weimer  <fweimer@redhat.com>

	[BZ #22607]
	CVE-2017-1000409
	* elf/dl-load.c (_dl_init_paths): Compute number of components in
	the expanded path string.

2017-12-14  Florian Weimer  <fweimer@redhat.com>

	[BZ #22606]
	CVE-2017-1000408
	* elf/dl-load.c (system_dirs): Update comment.
	(nsystem_dirs_len): Use array_length.
	(_dl_init_paths): Use nsystem_dirs_len to compute the array size.

2017-11-02  Florian Weimer  <fweimer@redhat.com>
